# 3dgol

./: .gitignore  3dgol.cpp  3dgol.h  CMakeLists.txt  README.md  cube.frag  cube.vert  display.cpp  display.h  field.cpp  field.h  glider.5.5.5.4.txt  glider.6.6.7.5.txt  gui.cpp  kernels.cu  kernels.h  main.cpp  util.cpp  util.h  wire_cube.frag  wire_cube.vert
cmake/Modules/: FindGLFW.cmake  FindGLM.cmake
